partial copyover from 2022

--- a/_sass/custom/card.scss
+++ b/_sass/custom/card.scss
@@ -30,4 +30,22 @@
     margin-left: 0;
     user-select: none;
   }
+  .label-green {
+    background-color: #2F6960;
+  }
+  .label-ltgreen {
+    background-color: #45A89A;
+  }
+  .label-orange{
+    background-color: #F08352;
+  }
+  .label-blue{
+    background-color: #276EA3;
+  }
+  .label-ltblue{
+    background-color: #46A6F0;
+  }
+  .label-gray{
+    background-color: #6f6f6f;
+  }
 }
