rough update post first instructor meeting

--- a/_sass/custom/card.scss
+++ b/_sass/custom/card.scss
@@ -30,16 +30,16 @@
     margin-left: 0;
     user-select: none;
   }
-  .label-green {
+  .label-lecture {
     background-color: #2F6960;
   }
-  .label-ltgreen {
+  .label-studio {
     background-color: #45A89A;
   }
-  .label-orange{
+  .label-quiz{
     background-color: #F08352;
   }
-  .label-blue{
+  .label-proj{
     background-color: #276EA3;
   }
   .label-ltblue{
