more syllabus updates + some styling fixes

--- a/_sass/custom/schedule.scss
+++ b/_sass/custom/schedule.scss
@@ -92,16 +92,16 @@
       @extend .fs-2;
     }
 
-    &.lecture {
+    &.studio-lecture {
       background-color: #48A366;
     }
     &.studio {
       background-color: #5DF08E;
     }
-    &.section-a {
+    &.section-topic-a {
       background-color: #276EA3;
     }
-    &.section-b {
+    &.section-topic-b {
       background-color: #46A6F0;
     }
     &.office-hours {
